--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <meta charset="utf-8" />
 
 </head>
 
 <body>
-    <script src="sketch.js"></script>
+    <script src="/sketch.js"></script>
 </body>
 
 </html>
